--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 <slide class="" id="slide-3" style="background:;">
   <hgroup>
-    <h2>Reload Jane Austin</h2>
+    <h2>Reload Jane Austen</h2>
   </hgroup>
   <article data-timings="">
     <pre><code class="bash">&gt; switch to console
@@ -488,7 +488,7 @@ Hello.  How are you feeling today?
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=3 title='Reload Jane Austin'>
+        data-slide=3 title='Reload Jane Austen'>
          3
       </a>
     </li>
